[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nshm_logic_tree_utilities"
authors = [
    {name = "QuakeCoRE" },
]
description = "PACKAGE DESCRIPTION HERE"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint]
extend-select = ["I", "W605", "N", "D101", "D102", "D103", "D105", "D107", "UP032", "UP035", "ANN001", "BLE001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "source_modelling",
    "qcore",
    "workflow",
    "pygmt_helper",
    "qcore",
    "empirical",
    "nshmdb",
    "IM_calculation",
    "mera"
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]